# toy_localization_agent

./: .env.example  .gitignore  MANIFEST.in  README.md  comparison.py  config.py  feature_heuristics.py  formatting.py  language_utils.py  main.py  market_normalizer.py  pyproject.toml  regulation_matrix.py  requirements.txt  schemas.py  verification.py  webapp.py  workflow.py
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  coordinator.py  culture_agent.py  design_agent.py  feature_extractor.py  image_gen.py  json_repair.py  language_normalizer.py  prompt_refiner.py  regulation_agent.py  three_d_gen.py
examples/dashscope/: image_edit_example.py
knowledge/: build_kb.py  retriever.py
knowledge/data/: japan.txt  saudi.txt  usa.txt
tests/: test_config.py  test_formatting.py  test_main.py  test_market_normalizer.py  test_retriever.py  test_schemas.py  test_webapp.py  test_workflow.py
web/: __init__.py  index.html
web/assets/: app.js  styles.css
